tests/reject/tnolen.nim
discard """
  line: 8
  msg: "Error: type mismatch: got (int)"
"""

# please finally disallow Len(3)

echo len(3)

